@@ -12,3 +12,4 @@
 - Make sure presence is stopped and the thread is properly deleted when the app is closed -- kaneryu on 2025-07-03
 - codebase now passes mypy check (not in strict mode, with some changes made in mypy.ini) -- kaneryu on 2025-07-05
 - songs can now be in the queue without a MRL ready -- kaneryu on 2025-07-07
+- If expiration isn't set, ignore it -- kaneryu on 2025-07-07
